# mpl-altair

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: dump_spec.py  gallery.py  gallery_charts.py  try_m2.py  try_m3m4.py
src/mplaltair/: __init__.py  _compile.py  _guides.py  _layout.py  _marks.py  _renderer.py  _scales.py
src/mplaltair/_style/: vega-lite.mplstyle
tests/: test_smoke.py
