[project]
name = "mpl-altair"
version = "0.1.0"
description = "A native matplotlib backend for Altair"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Josh Pollock", email = "jopo@mit.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "altair>=6",
    "vl-convert-python>=1.9",
    "vegafusion>=2",
    "matplotlib>=3.8",
    "pandas",
    "numpy",
]
keywords = ["altair", "matplotlib", "vega-lite", "visualization", "charts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/joshpoll/mpl-altair"
Repository = "https://github.com/joshpoll/mpl-altair"
Issues = "https://github.com/joshpoll/mpl-altair/issues"

[dependency-groups]
dev = [
    "pytest",
]

[project.entry-points."altair.vegalite.v6.renderer"]
mplaltair = "mplaltair._renderer:renderer"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mplaltair"
